--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "crypto-js": "3.1.9-1",
     "express": "^4.14.0",
     "jquery": "3.2.1",
+    "clipboard": "1.6.1",
     "underscore": "^1.8.3",
     "underscore-template-loader": "0.7.3",
     "webpack": "^2.3.3",
