--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "start": "node server.js",
-    "build": "NODE_ENV=production ./node_modules/.bin/webpack -p --config webpack.config.js"
+    "build": "NODE_ENV=production ./node_modules/.bin/webpack -p --optimize-minimize --config webpack.prod.config.js"
   },
   "keywords": [
     "password",
@@ -23,13 +23,15 @@
     "backbone.babysitter": "0.1.12",
     "backbone.marionette": "2.4.7",
     "backbone.wreqr": "1.4.0",
-    "compression-webpack-plugin": "^0.3.2",
     "crypto-js": "3.1.9-1",
-    "express": "^4.14.0",
     "jquery": "3.2.1",
     "clipboard": "1.6.1",
     "underscore": "^1.8.3",
-    "underscore-template-loader": "0.7.3",
+    "underscore-template-loader": "0.7.3"
+  },
+  "devDependencies": {
+    "compression-webpack-plugin": "^0.3.2",
+    "express": "^4.14.0",
     "webpack": "^2.3.3",
     "webpack-bundle-analyzer": "^2.3.1",
     "webpack-dev-middleware": "^1.10.1",
